Fix bug, decrease #root padding to remove scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ body {
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 5px;
   text-align: center;
   display: flex;
   flex-direction: column;
